gcc/testsuite/rust/rustc/ui/error-codes/E0259_dg.rs
#![feature(test)]

extern crate alloc;

extern crate test as alloc;
// { dg-error ".E0259." "" { target *-*-* } .-1 }

fn main() {}

